--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@ for (var attr in meta) {
     </div>
   </details>
 </header-drawer>
-<a href="/" class="header__heading-link link link--text focus-inset"><span class="h2">Dino99 >>> Daftar Situs Slot Deposit Pakai Pulsa Tanpa Potongan Terpercaya 2024di Indonesia</span></a>
+<a href="/" class="header__heading-link link link--text focus-inset"><span class="h2">Dino99 >>> Daftar Situs Slot Deposit Pakai Pulsa Tanpa Potongan Terpercaya 2024</span></a>
 
 <nav class="header__inline-menu">
   <ul class="list-menu list-menu--inline" role="list"><li><a
@@ -1258,10 +1258,10 @@ Item added to your cart
                 class="product__text inline-richtext caption-with-letter-spacing"
                 
               >Dino99</p><div class="product__title" >
-                <h1>Dino99 >>> Daftar Situs Slot Deposit Pakai Pulsa Tanpa Potongan Terpercaya 2024di Indonesia</h1>
+                <h1>Dino99 >>> Daftar Situs Slot Deposit Pakai Pulsa Tanpa Potongan Terpercaya 2024</h1>
                 <a href="/products/dino99" class="product__title">
                   <h2 class="h1">
-                    Dino99 >>> Daftar Situs Slot Deposit Pakai Pulsa Tanpa Potongan Terpercaya 2024di Indonesia
+                    Dino99 >>> Daftar Situs Slot Deposit Pakai Pulsa Tanpa Potongan Terpercaya 2024
                   </h2>
                 </a>
               </div><div class="product__description rte quick-add-hidden" >
@@ -1324,7 +1324,7 @@ Item added to your cart
     srcset="//60ae05-2.myshopify.com/cdn/shop/files/31.jpg?v=1705464297&width=550 550w,//60ae05-2.myshopify.com/cdn/shop/files/31.jpg?v=1705464297 564w"
     sizes="(min-width: 750px) calc(100vw - 22rem), 1100px"
     src="//60ae05-2.myshopify.com/cdn/shop/files/31.jpg?v=1705464297&width=1445"
-    alt="Dino99 >>> Daftar Situs Slot Deposit Pakai Pulsa Tanpa Potongan Terpercaya 2024di Indonesia"
+    alt="Dino99 >>> Daftar Situs Slot Deposit Pakai Pulsa Tanpa Potongan Terpercaya 2024"
     loading="lazy"
     width="1100"
     height="1375"
@@ -1502,7 +1502,7 @@ Item added to your cart
     <div class="footer__content-bottom-wrapper page-width">
       <div class="footer__copyright caption">
         <small class="copyright__content"
-          >&copy; 2024, <a href="/" title="">Dino99 >>> Daftar Situs Slot Deposit Pakai Pulsa Tanpa Potongan Terpercaya 2024di Indonesia</a></small>
+          >&copy; 2024, <a href="/" title="">Dino99 >>> Daftar Situs Slot Deposit Pakai Pulsa Tanpa Potongan Terpercaya 2024</a></small>
         <small class="copyright__content"><a target="_blank" rel="nofollow" href="https://www.shopify.com?utm_campaign=poweredby&amp;utm_medium=shopify&amp;utm_source=onlinestore">Powered by Shopify</a></small></div>
     </div>
   </div>
